--- a/.mybashrc
+++ b/.mybashrc
@@ -8,10 +8,10 @@ alias sshmsc="sshpass -p 'LrPbbK' ssh mutokukai.ru"
 alias sshautrs="sshmsc -t 'cd /net/server/data/home/meg/DMALT/aut_rs; bash -l'"
 
 # To avoid loss of comands in history # 
-export HISTFILESIZE=20000
-export HISTSIZE=40000
-export PROMPT_COMMAND="history -a"
-shopt -s histappend
+# export HISTFILESIZE=20000
+# export HISTSIZE=40000
+# export PROMPT_COMMAND="history -a"
+# shopt -s histappend
 # ----------------------------------- #
 
 export SCRIPTS_DIR=~/Dropbox/scripts
