--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	email = dm.altukhov@ya.ru
 	name = Dmitriy Altukhov
 [core]
-	editor = subl -w -n
+	editor = vim
 [alias]
 	st = status
 [filter "lfs"]
