--- a/.i3/config
+++ b/.i3/config
@@ -239,6 +239,7 @@ bindsym $mod+Shift+d exec google-chrome
 # setxkbmap -option 'grp:ctrl_alt_toggle'
 
 exec setxkbmap -layout us -option ctrl:nocaps
+exec setxkbmap -layout ru -option ctrl:nocaps
 exec --no-startup-id conky
 exec --no-startup-id xfce4-power-manager
 exec_always --no-startup-id feh --bg-scale ~/dotfiles/wallpaper.jpg
