--- a/.i3/config
+++ b/.i3/config
@@ -168,6 +168,10 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 # exec --no-startup-id dropbox start
 exec --no-startup-id nm-applet
+exec --no-startup-id light-locker --lock-on-lid --lock-on-suspend
+# Screensaver
+exec --no-startup-id xset dpms 500 0 0 
+# exec --no-startup-id xautolock -time 10 -locker i3lock
 
 set $bg-color            #2f343f
 set $inactive-bg-color   #2f343f
@@ -222,7 +226,7 @@ exec setxkbmap -layout us -option ctrl:nocaps
 exec setxkbmap -layout ru -option ctrl:nocaps
 
 
-assign [class="google-chrome"] $workspace3
+assign [class="Google-chrome"] $workspace3
 
 assign [class="Sublime_text"] $workspace2
 assign [class="Slack"] $workspace10
@@ -230,6 +234,7 @@ assign [class="Pcmanfm"] $workspace4
 assign [class="Shutter"] $workspace6
 assign [class="TelegramDesktop"] $workspace10
 assign [class="MATLAB R2016a"] $workspace5
+assign [class="franz"] $workspace10
 
 exec_always --no-startup-id compton
 set $ALT Mod1
@@ -244,7 +249,8 @@ bindsym $mod+Shift+d exec google-chrome
 # exec setxkbmap -layout us -option ctrl:nocaps
 exec --no-startup-id conky
 exec --no-startup-id xfce4-power-manager
-exec_always --no-startup-id feh --bg-scale ~/dotfiles/wallpaper.jpg
+# exec_always --no-startup-id feh --bg-scale ~/dotfiles/wallpaper.jpg
+exec_always --no-startup-id feh --bg-scale ~/dotfiles/shuttle.png
 # exec_always --no-startup-id feh  ~/Dropbox/Pictures/Wallpapers/astronaut_crop.jpg
 
 bindsym Print exec --no-startup-id shutter -s
