--- a/.i3/config
+++ b/.i3/config
@@ -98,11 +98,13 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 set $workspace1 "1: "
-set $workspace2 "2: "
-set $workspace3 "3: "
-set $workspace4 "4: "
-set $workspace5 "5: "
-set $workspace6 "6: "
+set $workspace2 "2: "
+set $workspace3 "3: "
+set $workspace4 "4: "
+set $workspace5 "5: "
+set $workspace6 "6: "
+set $workspace7 "7: "
+set $workspace8 "8: "
 set $workspace9 "9: ♪"
 set $workspace10 "10: "
 # set $workspace10 "4: chat"
@@ -114,8 +116,8 @@ bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace $workspace5
 bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
 bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
@@ -125,9 +127,9 @@ bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace $workspace4
 bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
@@ -221,20 +223,23 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightnes
 # Touchpad controls
 # bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
 
-# CapsLock to ctrl remap
-exec setxkbmap -layout us -option ctrl:nocaps
-exec setxkbmap -layout ru -option ctrl:nocaps
+# ------ Language settings; CapsLock to ctrl remap ------- #
+exec --no-startup-id setxkbmap -layout ru -option ctrl:nocaps
+exec --no-startup-id setxkbmap -layout us -option ctrl:nocaps
+exec --no-startup-id setxkbmap us
+# -------------------------------------------------------- #
 
-
-assign [class="Google-chrome"] $workspace3
-
-assign [class="Sublime_text"] $workspace2
+# ---------- Windows to workspaces assignements ---------- # 
+assign [class="Sublime_text"] $workspace3
+assign [class="Google-chrome"] $workspace5
+assign [class="Pcmanfm"] $workspace6
+assign [class="MATLAB R2016a"] $workspace7
+assign [class="Shutter"] $workspace8
+assign [class="Tomahawk"] $workspace9
 assign [class="Slack"] $workspace10
-assign [class="Pcmanfm"] $workspace4
-assign [class="Shutter"] $workspace6
 assign [class="TelegramDesktop"] $workspace10
-assign [class="MATLAB R2016a"] $workspace5
-assign [class="franz"] $workspace10
+assign [class="Franz"] $workspace10
+# -------------------------------------------------------- # 
 
 exec_always --no-startup-id compton
 set $ALT Mod1
