--- a/.i3/config
+++ b/.i3/config
@@ -32,7 +32,8 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec urxvt
+# bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -40,7 +41,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec rofi -fuzzy -show run -lines 20 -eh 2 -width 50 -padding 100 -opacity 20 -bw 0 -bc "#383838" -bg "#282828" -fg "#f8f8f8" -hlbg "#ab4642" -hlfg "#e8e8e8"
-bindsym $mod+d exec rofi -show run -lines 7 -eh 2 -width 100 -padding 300 -opacity "85" -bw 0  -font "System San Francisco Display 18"
+bindsym $mod+d exec rofi -show run -lines 7 -eh 2 -width 100 -padding 800 -opacity "85" -bw 0  -font "System San Francisco Display 32"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -169,7 +170,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # exec --no-startup-id dropbox start
-exec --no-startup-id nm-applet
+# exec --no-startup-id nm-applet
 exec --no-startup-id light-locker --lock-on-lid --lock-on-suspend
 # Screensaver
 exec --no-startup-id xset dpms 500 0 0 
@@ -212,9 +213,12 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 bindsym $mod+shift+x exec --no-startup-id i3lock --color "$bg-color"
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id amixer -q -D pulse sset Master toggle # mute sound
+# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym F2 exec --no-startup-id amixer -q sset Master 5%- #decrease sound volume
+bindsym F3 exec --no-startup-id amixer -q sset Master 5%+ #decrease sound volume
+# bindsym XF86AudioMute exec --no-startup-id amixer -q -D pulse sset Master toggle # mute sound
+bindsym F1 exec --no-startup-id amixer sset Master toggle # mute sound
 
 # Sreen brightness controls
 # bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
@@ -223,11 +227,12 @@ bindsym XF86AudioMute exec --no-startup-id amixer -q -D pulse sset Master toggle
 bindsym XF86MonBrightnessUp exec xbright +5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbright -5 # decrease screen brightness
 # Touchpad controls
-# bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
+bindsym F7 exec $HOME/dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
+
 
 # ------ Language settings; CapsLock to ctrl remap ------- #
-exec --no-startup-id setxkbmap -layout ru -option ctrl:nocaps
-exec --no-startup-id setxkbmap -layout us -option ctrl:nocaps
+# exec --no-startup-is setxkbmap -layout ru -option ctrl:nocaps
+# exec --no-startup-id setxkbmap -layout us -option ctrl:nocaps
 exec --no-startup-id setxkbmap us
 # -------------------------------------------------------- #
 
@@ -244,13 +249,13 @@ assign [class="TelegramDesktop"] $workspace10
 assign [class="Franz"] $workspace10
 # -------------------------------------------------------- # 
 
-exec_always --no-startup-id compton
+# exec_always --no-startup-id compton
 set $ALT Mod1
 bindsym Control+Shift+r exec setxkbmap ru
 bindsym Control+Shift+space exec setxkbmap us
 
-bindsym $mod+Shift+s exec subl
-bindsym $mod+Shift+d exec google-chrome
+# bindsym $mod+Shift+s exec subl
+bindsym $mod+Shift+d exec google-chrome-stable
 # setxkbmap -layout ru,us
 # setxkbmap -option 'grp:ctrl_alt_toggle'
 
