add battery reporting

--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -57,7 +57,8 @@ interval=30
 [disk1]
 label=/ 
 interval=30
-command=df -h /dev/sda9 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{2}%.*/\1/p"
+# command=df -h /dev/sda9 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{2}%.*/\1/p"
+command=df -h /dev/nvme0n1p1 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{1,2}%.*/\1/p"
 
 
 # Network interface monitoring
@@ -98,13 +99,15 @@ interval=10
 # separator=false
 
 # Battery indicator
-#
+
 # The battery instance defaults to 0.
-# [battery]
-# # label=BAT
-# label=⚡
-# #instance=1
-# interval=30
+[battery]
+# label=BAT
+label=⚡
+# command=upower -i `upower -e | grep BAT` | grep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn} percentage
+command=$HOME/dotfiles/scripts/showbat.sh
+#instance=1
+interval=30
 
 # Volume indicator
 #
