--- a/.i3/config
+++ b/.i3/config
@@ -188,7 +188,7 @@ bar {
         # hidden_state hide
         # modifier $mod
         position top
-        status_command i3blocks -c ~/.i3/i3blocks.conf
+        status_command i3blocks -c ~/.config/i3/i3blocks.conf
         # status_command i3status
         # tray_output LVDS
         colors {
