--- a/.i3/config
+++ b/.i3/config
@@ -232,7 +232,8 @@ bindsym F7 exec $HOME/dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
 
 # ------ Language settings; CapsLock to ctrl remap ------- #
 # exec --no-startup-is setxkbmap -layout ru -option ctrl:nocaps
-# exec --no-startup-id setxkbmap -layout us -option ctrl:nocaps
+exec --no-startup-id setxkbmap -layout us -option ctrl:nocaps
+exec --no-startup-id xmodmap ~/.Xdefaults
 exec --no-startup-id setxkbmap us
 # -------------------------------------------------------- #
 
