fix leading dot before dotfiles in path to scripts

--- a/i3/config
+++ b/i3/config
@@ -227,7 +227,7 @@ bindsym F1 exec --no-startup-id amixer sset Master toggle # mute sound
 bindsym XF86MonBrightnessUp exec xbright +5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbright -5 # decrease screen brightness
 # Touchpad controls
-bindsym F7 exec $HOME/dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
+bindsym F7 exec $HOME/.dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
 
 
 # ------ Language settings; CapsLock to ctrl remap ------- #
@@ -264,7 +264,7 @@ bindsym $mod+Shift+d exec google-chrome-stable
 exec --no-startup-id conky
 exec --no-startup-id xfce4-power-manager
 # exec_always --no-startup-id feh --bg-scale ~/dotfiles/wallpaper.jpg
-exec_always --no-startup-id feh --bg-scale ~/dotfiles/wallpapers/shuttle.png
+exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/shuttle.png
 # exec_always --no-startup-id feh  ~/Dropbox/Pictures/Wallpapers/astronaut_crop.jpg
 
 bindsym Print exec --no-startup-id shutter -s
