--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -105,7 +105,7 @@ interval=10
 # label=BAT
 label=⚡
 # command=upower -i `upower -e | grep BAT` | grep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn} percentage
-command=$HOME/dotfiles/scripts/showbat.sh
+command=$HOME/.dotfiles/scripts/showbat.sh
 #instance=1
 interval=30
 
