--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -61,6 +61,12 @@ interval=30
 command=df -h /dev/nvme0n1p1 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{1,2}%.*/\1/p"
 
 
+[brightness]
+label=
+command=$DOTFILES/scripts/show_brightness.sh
+interval=1
+# label=
+# command=df -h /dev/nvme0n1p1 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{1,2}%.*/\1/p"
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
