--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -127,7 +127,8 @@ label=
 # instance=PCM
 interval=1
 signal=10
-command=/usr/share/i3blocks/volume 5 pulse
+# command=/usr/share/i3blocks/volume 5 pulse
+command=$DOTFILES/scripts/show_sound.sh
 
 # Layout
 [key_layout]
