fix clumsy scripting

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -93,12 +93,12 @@ interval=1
 # min_width=CPU: 100.00%
 #separator=false
 
-[load_average]
-label=
-interval=10
+# [load_average]
+# label=
+# interval=10
 
 # [wifi]
-# # instance=wlp3s0
+# instance=wlp3s0
 # label=
 # color=#f3f4f5
 # interval=10
@@ -121,8 +121,8 @@ interval=30
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=
-# label=♪
+# label=
+label=♪
 # instance=IEC958
 # instance=PCM
 interval=1
@@ -141,7 +141,6 @@ command=~/Dropbox/scripts/key_layout
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
-
 
 
 # Generic media player support
