reduce interval and move lighting icon to showbat

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -109,11 +109,11 @@ interval=1
 # The battery instance defaults to 0.
 [battery]
 # label=BAT
-label=⚡
+# label=⚡
 # command=upower -i `upower -e | grep BAT` | grep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn} percentage
 command=$HOME/.dotfiles/scripts/showbat.sh
 #instance=1
-interval=30
+interval=10
 
 # Volume indicator
 #
