show layout in i3blocks

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -109,7 +109,7 @@ interval=1
 # The battery instance defaults to 0.
 [battery]
 # label=BAT
-# label=⚡
+label=
 # command=upower -i `upower -e | grep BAT` | grep --color=auto --exclude-dir={.bzr,CVS,.git,.hg,.svn} percentage
 command=$HOME/.dotfiles/scripts/showbat.sh
 #instance=1
@@ -134,7 +134,7 @@ command=$DOTFILES/scripts/show_sound.sh
 [key_layout]
 label=
 interval=1
-command=~/Dropbox/scripts/key_layout
+command=$DOTFILES/scripts/show_layout.sh
 
 # Date Time
 #
