--- a/i3/config
+++ b/i3/config
@@ -269,11 +269,12 @@ bindsym $mod+Shift+d exec google-chrome-stable
 # exec setxkbmap -layout us -option ctrl:nocaps
 exec --no-startup-id conky
 # exec --no-startup-id xfce4-power-manager
-# exec_always --no-startup-id feh --bg-scale ~/dotfiles/wallpaper.jpg
-exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/shuttle.png
+exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/earth.jpg
+# exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/shuttle.png
 # exec_always --no-startup-id feh  ~/Dropbox/Pictures/Wallpapers/astronaut_crop.jpg
 
-bindsym Print exec --no-startup-id shutter -s
+# bindsym Print exec --no-startup-id shutter -s
+bindsym Print exec deepin-screenshot
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
