--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@
 # panes
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
+set-option -sg escape-time 10
 
 ## Status bar design
 # status line
