--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,9 @@
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
 set-option -sg escape-time 10
-
+# set -ga terminal-overrides ',xterm-256color:Tc'
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+# set -ga terminal-overrides ',*:Ss=\eE[%p1%d q:Se=\eE[2 q'
 ## Status bar design
 # status line
 # set -g status-utf8 on
