--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -49,17 +49,27 @@ separator_block_width=15
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-label=~ 
-#instance=/mnt/data
-interval=30
+#[disk]
+#label=~ 
+##instance=/mnt/data
+#interval=30
 
-[disk1]
-label=/ 
-interval=30
-# command=df -h /dev/sda9 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{2}%.*/\1/p"
-command=df -h /dev/nvme0n1p1 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{1,2}%.*/\1/p"
+#[disk1]
+#label=/ 
+#interval=30
+## command=df -h /dev/sda9 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{2}%.*/\1/p"
+#command=df -h /dev/nvme0n1p1 | sed -rn "s/.*\s([0-9\.]+G)\s+[0-9]{1,2}%.*/\1/p"
 
+
+[volume]
+# label=
+label=♪
+# instance=IEC958
+# instance=PCM
+interval=1
+signal=10
+# command=/usr/share/i3blocks/volume 5 pulse
+command=$DOTFILES/scripts/show_sound.sh
 
 [brightness]
 label=
@@ -120,27 +130,20 @@ interval=10
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
-# label=
-label=♪
-# instance=IEC958
-# instance=PCM
-interval=1
-signal=10
-# command=/usr/share/i3blocks/volume 5 pulse
-command=$DOTFILES/scripts/show_sound.sh
 
 # Layout
 [key_layout]
 label=
 interval=1
-command=$DOTFILES/scripts/show_layout.sh
+command=xkb-switch
+# command=$DOTFILES/scripts/show_layout.sh
 
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+# command=date '+%H:%M:%S'
 interval=1
+command=date '+%Y-%m-%d %H:%M:%S'
 
 
 # Generic media player support
