--- a/i3/config
+++ b/i3/config
@@ -11,7 +11,8 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-
+set $term termite
+# set $viterm='termite -e "nvim +star -c \"term\" -c \"colorscheme twilight256\""'
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:System San Francisco Display 9
@@ -32,7 +33,8 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec termite -e "vim +star -c term -c 'colorscheme twilight256' -c 'set norelativenumber' -c 'set nonumber' -c 'AirlineToggle'"
 # bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
@@ -41,7 +43,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec rofi -fuzzy -show run -lines 20 -eh 2 -width 50 -padding 100 -opacity 20 -bw 0 -bc "#383838" -bg "#282828" -fg "#f8f8f8" -hlbg "#ab4642" -hlfg "#e8e8e8"
-bindsym $mod+d exec rofi -show run -lines 7 -eh 2 -width 100 -padding 800 -opacity "85" -bw 0  -font "System San Francisco Display 32"
+bindsym $mod+d exec rofi -show run 
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -167,13 +169,14 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # exec --no-startup-id dropbox start
 # exec --no-startup-id nm-applet
 exec --no-startup-id light-locker --lock-on-lid --lock-on-suspend
 # Screensaver
-exec --no-startup-id xset dpms 500 0 0 
+exec --no-startup-id xset dpms 500 0 0
 # exec --no-startup-id xautolock -time 10 -locker i3lock
 
 set $bg-color            #2f343f
@@ -215,10 +218,10 @@ bindsym $mod+shift+x exec --no-startup-id i3lock --color "$bg-color"
 # Pulse Audio controls
 # bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 # bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym F2 exec --no-startup-id amixer -q sset Master 5%- #decrease sound volume
-bindsym F3 exec --no-startup-id amixer -q sset Master 5%+ #decrease sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q sset Master 5%- #decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q sset Master 5%+ #decrease sound volume
 # bindsym XF86AudioMute exec --no-startup-id amixer -q -D pulse sset Master toggle # mute sound
-bindsym F1 exec --no-startup-id amixer sset Master toggle # mute sound
+bindsym XF86AudioMute exec --no-startup-id amixer sset Master toggle # mute sound
 
 # Sreen brightness controls
 # bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
@@ -231,6 +234,8 @@ bindsym F12 exec light -A 5 # decrease screen brightness
 # Touchpad controls
 bindsym F7 exec $HOME/.dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
 
+bindsym $mod+Shift+s exec termite -e vim
+bindsym $mod+Shift+a exec termite -e ranger
 
 # ------ Language settings; CapsLock to ctrl remap ------- #
 # exec --no-startup-is setxkbmap -layout ru -option ctrl:nocaps
@@ -239,37 +244,55 @@ bindsym F7 exec $HOME/.dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
 # exec --no-startup-id setxkbmap us
 # -------------------------------------------------------- #
 
-# ---------- Windows to workspaces assignements ---------- # 
+# ---------- Windows to workspaces assignements ---------- #
 assign [class="Sublime_text"] $workspace3
 assign [class="Google-chrome"] $workspace5
 assign [class="Pcmanfm"] $workspace6
 assign [class="MATLAB R2016a"] $workspace7
 assign [class="MATLAB R2017a"] $workspace7
+assign [class="MATLAB R2017b"] $workspace7
+assign [class="MATLAB R2018a"] $workspace7
 assign [class="Shutter"] $workspace8
 assign [class="Tomahawk"] $workspace9
 assign [class="Slack"] $workspace10
 assign [class="TelegramDesktop"] $workspace10
 assign [class="Franz"] $workspace10
-# -------------------------------------------------------- # 
+assign [class="mne_coreg.py"] $workspace7
+assign [class="Mne_coreg.py"] $workspace7
+assign [class="-c"] $workspace7
+assign [class="old_gui.py"] $workspace7
+# assign [class="ipython"] $workspace7
+# assign [class="Ipython"] $workspace7
+assign [class="old_gui_runner.py"] $workspace7
+assign [class="mendeleydesktop.x86_64"] $workspace6
+assign [class="Mendeley Desktop"] $workspace6
+# -------------------------------------------------------- #
 
 
 exec_always --no-startup-id compton
 # ---------------------- switch layout ---------------------------- #
+# exec "setxkbmap -layout us,ru"
+# exec "setxkbmap -option 'grp:alt_shift_toggle'"
+exec "setxkbmap -model pc104 -layout us,ru -option grp:alt_shift_toggle -option ctrl:nocaps"
+
 set $ALT Mod1
-bindsym Control+Shift+r exec setxkbmap ru -option ctrl:nocaps
-bindsym Control+Shift+space exec setxkbmap us -option ctrl:nocaps
+# bindsym Control+Shift+r exec setxkbmap ru -option ctrl:nocaps
+# bindsym Control+Shift+space exec setxkbmap us -option ctrl:nocaps
 # ----------------------------------------------------------------- #
 
 
 # bindsym $mod+Shift+s exec subl
 bindsym $mod+Shift+d exec google-chrome-stable
+# bindsym $mod+Shift+d exec chromium
 # setxkbmap -layout ru,us
 # setxkbmap -option 'grp:ctrl_alt_toggle'
 
 # exec setxkbmap -layout us -option ctrl:nocaps
 exec --no-startup-id conky
 # exec --no-startup-id xfce4-power-manager
-exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/earth.jpg
+# exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/earth.jpg
+# exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/rocket.png
+exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/nz.jpg
 # exec_always --no-startup-id feh --bg-scale ~/.dotfiles/wallpapers/shuttle.png
 # exec_always --no-startup-id feh  ~/Dropbox/Pictures/Wallpapers/astronaut_crop.jpg
 
