--- a/i3/config
+++ b/i3/config
@@ -15,7 +15,8 @@ set $term termite
 # set $viterm='termite -e "nvim +star -c \"term\" -c \"colorscheme twilight256\""'
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 9
+# font pango:System San Francisco Display 9
+font pango:SuisseIntl 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -110,6 +111,10 @@ set $workspace7 "7: "
 set $workspace8 "8: "
 set $workspace9 "9: ♪"
 set $workspace10 "10: "
+
+workspace $workspace2 output HDMI-1-1 eDP-1-1
+workspace $workspace4 output HDMI-1-1 eDP-1-1
+workspace $workspace5 output eDP-1-1 HDMI-1-1
 # set $workspace10 "4: chat"
 
 # switch to workspace
@@ -229,8 +234,8 @@ bindsym XF86AudioMute exec --no-startup-id amixer sset Master toggle # mute soun
 
 # bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
 # bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
-bindsym F11 exec  light -U 5 # increase screen brightness
-bindsym F12 exec light -A 5 # decrease screen brightness
+bindsym F11 exec sudo light -U 1 # increase screen brightness
+bindsym F12 exec sudo light -A 1 # decrease screen brightness
 # Touchpad controls
 bindsym F7 exec $HOME/.dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
 
