--- a/i3/config
+++ b/i3/config
@@ -234,8 +234,8 @@ bindsym XF86AudioMute exec --no-startup-id amixer sset Master toggle # mute soun
 
 # bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
 # bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
-bindsym F11 exec sudo light -U 1 # increase screen brightness
-bindsym F12 exec sudo light -A 1 # decrease screen brightness
+bindsym F11 exec light -U 5 # increase screen brightness
+bindsym F12 exec light -A 5 # decrease screen brightness
 # Touchpad controls
 bindsym F7 exec $HOME/.dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
 
