add navigation shortcuts & update status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,20 @@
 ### DESIGN CHANGES ###
 ######################
 
+unbind C-b
+set-option -g prefix C-a
+bind C-a send-prefix
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+bind | split-window -h
+bind - split-window -v
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # panes
 set -g pane-border-style fg=black,fg=brightred
 set-option -sg escape-time 10
@@ -58,8 +72,9 @@ set -g pane-active-border-style bg=colour236,fg=colour51
 
 set -g status-position bottom
 set -g status-style bg=colour234,fg=colour137,dim
+set -g status-left-length 40
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#(upower -i `upower -e | grep BAT` | grep percentage | sed "s/percentage: */battery: /") #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
