--- a/i3/config
+++ b/i3/config
@@ -35,7 +35,7 @@ floating_modifier $mod
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec $term
-bindsym $mod+Shift+Return exec termite -e "vim +star -c term -c 'colorscheme twilight256' -c 'set norelativenumber' -c 'set nonumber' -c 'AirlineToggle'"
+bindsym $mod+Shift+Return exec termite -e "nvim +star -c term -c 'colorscheme twilight256' -c 'set norelativenumber' -c 'set nonumber' -c 'AirlineToggle'"
 # bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
@@ -239,7 +239,7 @@ bindsym F12 exec light -A 5 # decrease screen brightness
 # Touchpad controls
 bindsym F7 exec $HOME/.dotfiles/scripts/toggle_touchpad.sh # toggle touchpad
 
-bindsym $mod+Shift+s exec termite -e vim
+bindsym $mod+Shift+s exec termite -e nvim
 bindsym $mod+Shift+a exec termite -e ranger
 
 # ------ Language settings; CapsLock to ctrl remap ------- #
