--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -98,12 +98,14 @@ name ^[mM]akefile$            = make
 #--------------------------------------------
 # Code
 #-------------------------------------------
-ext py  = python -- "$1"
-ext pl  = perl -- "$1"
-ext rb  = ruby -- "$1"
-ext js  = node -- "$1"
-ext sh  = sh -- "$1"
-ext php = php -- "$1"
+# ext py  = python -- "$1"
+# ext pl  = perl -- "$1"
+# ext rb  = ruby -- "$1"
+# ext js  = node -- "$1"
+# ext sh  = sh -- "$1"
+# ext php = php -- "$1"
+#
+ext fif = mct -- "$1" inspect
 
 #--------------------------------------------
 # Audio without X
