--- a/tmux.conf
+++ b/tmux.conf
@@ -1,94 +1,43 @@
-######################
+#####################
 ### DESIGN CHANGES ###
 ######################
 
 unbind C-b
 set-option -g prefix C-a
 bind C-a send-prefix
+# bind C-a send-prefix
+# set-option -g prefix `
 
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
-bind | split-window -h
+bind \\ split-window -h
 bind - split-window -v
+bind v split-window -h
+bind s split-window -v
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key m resize-pane -Z
 
-# panes
-set -g pane-border-style fg=black,fg=brightred
+set -g mouse on
+
 set-option -sg escape-time 10
-# set -ga terminal-overrides ',xterm-256color:Tc'
-set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
-# set -ga terminal-overrides ',*:Ss=\eE[%p1%d q:Se=\eE[2 q'
-## Status bar design
-# status line
-# set -g status-utf8 on
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
 
-# messaging
-set -g message-style bg=yellow,fg=black
-set -g message-command-style bg=black,fg=blue
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-#window mode
-setw -g mode-style bg=colour6,fg=colour0
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions after restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically save sessions every 15 minutes
 
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-style bg=colour0,fg=colour11,dim
-setw -g window-status-style bg=green,fg=black,reverse
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/default/cyan'
 
-# Info on left (I don't have a session display for now)
-set -g status-left ''
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
+bind-key -n 'C-q' if-shell "$is_vim" 'send-keys C-q'  'kill-pane'
 
-set -g default-terminal "screen-256color"
-
-# The modes {
-setw -g clock-mode-colour colour135
-setw -g mode-style bg=colour238,fg=colour196,bold
-
-# }
-# The panes {
-
-set -g pane-border-style bg=colour235,fg=colour238
-set -g pane-active-border-style bg=colour236,fg=colour51
-
-# }
-# The statusbar {
-
-set -g status-position bottom
-set -g status-style bg=colour234,fg=colour137,dim
-set -g status-left-length 40
-set -g status-left ''
-set -g status-right '#(upower -i `upower -e | grep BAT` | grep percentage | sed "s/percentage: */battery: /") #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-style bg=colour81,fg=colour238,bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-style bg=colour235,fg=colour138,none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style bg=colour1,fg=colour255,bold
-
-# }
-# The messages {
-
-set -g message-style bg=colour166,fg=colour232,bold
-
-# }
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
