--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -105,7 +105,7 @@ name ^[mM]akefile$            = make
 # ext sh  = sh -- "$1"
 # ext php = php -- "$1"
 #
-ext fif = mct -- "$1" inspect
+ext fif = qfif -- "$1" inspect
 
 #--------------------------------------------
 # Audio without X
