--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ bind s split-window -v
 bind-key m resize-pane -Z
 
 set -g mouse on
+set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-termite:RGB'
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
 set-option -sg escape-time 10
 
