--- a/tmux.conf
+++ b/tmux.conf
@@ -35,4 +35,4 @@ bind-key -n 'C-q' if-shell "$is_vim" 'send-keys C-q'  'kill-pane'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
